centered form and fixed issue where boxes caused bad alignment

--- a/Zara Website 1/css/style.css
+++ b/Zara Website 1/css/style.css
@@ -329,15 +329,36 @@ opacity: 0.25;
 
 .card-content{
     padding: 0.2em;
-    font-size: 0.65em;
-
- 
-    
+    font-size: 0.65em;   
 }
 
 .card-title{
   font-weight: none;
 }
+
+
+/*boxes on contact page*/
+
+#contact-boxes{
+  background-color: whitesmoke;
+  padding: 2em 1em 1em; 
+}
+
+#contact-boxes ul{
+  list-style: none; /*gets rids of bullets*/
+  margin:0; 
+  padding:0;
+}
+
+#contact-boxes li{
+  margin-bottom: 1em; background: white;
+  color: #333;
+}
+
+.card-content{
+  padding: 1.5em; 
+}
+
 
 /*section C*/ 
 
@@ -458,6 +479,51 @@ p.social{
   padding: 0px;
 }
 
+#form-container{
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 300;
+    text-transform: uppercase;
+}
+
+
+/* Style inputs with type="text", select elements and textareas */
+#form-container input[type=text], select, textarea {
+  font-family: 'Montserrat', sans-serif;
+  width: 100%; /* Full width */
+  padding: 12px; /* Some padding */ 
+  border: 1px solid #ccc; /* Gray border */
+  border-radius: 4px; /* Rounded borders */
+  box-sizing: border-box; /* Make sure that padding and width stays in place */
+  margin-top: 6px; /* Add a top margin */
+  margin-bottom: 16px; /* Bottom margin */
+  resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+  
+}
+
+/* Style the submit button with a specific background color etc */
+#form-container input[type=submit] {
+  background-color: #04AA6D /*darker*/;
+  color: white;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+/* When moving the mouse over the submit button, add a darker green color */
+#form-container input[type=submit]:hover {
+  background-color: #45a049;
+}
+
+/* Add a background color and some padding around the form */
+#form-container {
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+  color: black;
+}
+
+
 
 
 /*change url color and remove underline*/
@@ -551,20 +617,29 @@ p.copyright{
   }
 
   .content-wrap, 
-  #section-b ul{
+  #section-b {
       grid-column: 2/4; 
+  }
+
+  #form-container form{
+    grid-column: 2/4;
+    
+  }
+
+  #contact-boxes ul{
+     grid-column:  1/5; 
   }
 
   .box, #main-footer div{
       grid-column: span 2; 
   }
 
-  #section-b ul, #section-j ul{
+  #section-b ul, #section-j ul, #contact-boxes ul{
       display: flex;
       justify-content: space-around; 
   }
 
-  #section-j li, #section-b li{
+  #section-j li, #section-b li, #contact-boxes li{
       width: 31%; 
   }
 
